--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,27 @@
-name: Build and Release
+name: Build Cross-Platform
 
 on:
-  push:
-    branches: [ main, develop ]
-    tags: [ 'v*' ]
-  pull_request:
-    branches: [ main ]
+  workflow_call:
+    inputs:
+      upload_artifacts:
+        description: 'Whether to upload build artifacts'
+        required: false
+        type: boolean
+        default: true
+      artifact_retention_days:
+        description: 'How long to keep artifacts (days)'
+        required: false
+        type: number
+        default: 7
+      build_profile:
+        description: 'Cargo build profile (debug or release)'
+        required: false
+        type: string
+        default: 'release'
+    outputs:
+      artifact_names:
+        description: 'JSON array of artifact names created'
+        value: ${{ jobs.build.outputs.artifact_names }}
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,6 +31,8 @@ jobs:
   build:
     name: Build ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
+    outputs:
+      artifact_names: ${{ steps.set_artifacts.outputs.names }}
     strategy:
       fail-fast: false
       matrix:
@@ -83,13 +101,13 @@ jobs:
       uses: actions/cache@v3
       with:
         path: target
-        key: ${{ runner.os }}-${{ matrix.target }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-${{ matrix.target }}-${{ inputs.build_profile }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
-          ${{ runner.os }}-${{ matrix.target }}-cargo-build-
+          ${{ runner.os }}-${{ matrix.target }}-${{ inputs.build_profile }}-cargo-build-
 
     # Linux specific dependencies
     - name: Install Linux dependencies
-      if: runner.os == 'Linux'
+      if: runner.os == 'Linux' && !matrix.cross
       run: |
         sudo apt-get update
         sudo apt-get install -y \
@@ -118,107 +136,66 @@ jobs:
         # Ensure WebView2 is available (pre-installed on GitHub runners)
         echo "WebView2 should be pre-installed on GitHub Actions Windows runners"
 
-    - name: Run tests
+    - name: Run tests (native only)
+      if: "!matrix.cross"
       run: cargo test --verbose
 
-    - name: Build release binary
+    - name: Build binary
       run: |
+        BUILD_FLAG=""
+        if [[ "${{ inputs.build_profile }}" == "release" ]]; then
+          BUILD_FLAG="--release"
+        fi
+        
         if [[ "${{ matrix.cross }}" == "true" ]]; then
-          cross build --release --target ${{ matrix.target }} --verbose
+          cross build $BUILD_FLAG --target ${{ matrix.target }} --verbose
         else
-          cargo build --release --target ${{ matrix.target }} --verbose
+          cargo build $BUILD_FLAG --target ${{ matrix.target }} --verbose
         fi
       shell: bash
       env:
         # Ensure proper cross-compilation environment
         CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
-        # macOS cross-compilation from macOS runners works natively
-        # Windows compilation works natively on Windows runners
 
-    - name: Strip binary (Unix)
-      if: runner.os != 'Windows'
+    - name: Strip binary (Unix, release only)
+      if: runner.os != 'Windows' && inputs.build_profile == 'release'
       run: |
-        strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+        strip target/${{ matrix.target }}/${{ inputs.build_profile }}/${{ matrix.artifact_name }}
 
     - name: Prepare binary for upload
+      if: inputs.upload_artifacts
       run: |
         mkdir -p artifacts
+        BINARY_PATH="target/${{ matrix.target }}/${{ inputs.build_profile }}/${{ matrix.artifact_name }}"
+        
         if [[ "${{ runner.os }}" == "Windows" ]]; then
-          cp target/${{ matrix.target }}/release/${{ matrix.artifact_name }} artifacts/${{ matrix.asset_name }}
+          cp "$BINARY_PATH" "artifacts/${{ matrix.asset_name }}"
         else
-          cp target/${{ matrix.target }}/release/${{ matrix.artifact_name }} artifacts/${{ matrix.asset_name }}
+          cp "$BINARY_PATH" "artifacts/${{ matrix.asset_name }}"
+        fi
+        
+        # Create checksum
+        cd artifacts
+        if [[ "${{ runner.os }}" == "Windows" ]]; then
+          powershell -command "Get-FileHash -Algorithm SHA256 '${{ matrix.asset_name }}' | Select-Object -ExpandProperty Hash" > ${{ matrix.asset_name }}.sha256
+        else
+          sha256sum "${{ matrix.asset_name }}" > "${{ matrix.asset_name }}.sha256"
         fi
       shell: bash
 
     - name: Upload build artifacts
+      if: inputs.upload_artifacts
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.asset_name }}
-        path: artifacts/${{ matrix.asset_name }}
-        retention-days: 30
+        path: |
+          artifacts/${{ matrix.asset_name }}
+          artifacts/${{ matrix.asset_name }}.sha256
+        retention-days: ${{ inputs.artifact_retention_days }}
 
-  # Create GitHub Release on tag push
-  release:
-    name: Create Release
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: artifacts/
-        
-    - name: Display structure of downloaded files
-      run: ls -la artifacts/
-
-    - name: Create checksums
+    - name: Set artifact names output
+      id: set_artifacts
+      if: inputs.upload_artifacts
       run: |
-        cd artifacts
-        for dir in */; do
-          cd "$dir"
-          sha256sum * > checksums.txt
-          cd ..
-        done
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ github.ref_name }}
-        name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: ${{ contains(github.ref_name, '-') }}
-        generate_release_notes: true
-        files: |
-          artifacts/*/iceberg-table-viewer-*
-          artifacts/*/checksums.txt
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # Additional job for development builds (non-release)
-  dev-build:
-    name: Development Build
-    needs: build
-    runs-on: ubuntu-latest
-    if: "!startsWith(github.ref, 'refs/tags/v')"
-    
-    steps:
-    - name: Download Linux x86_64 artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: iceberg-table-viewer-linux-x86_64
-        path: ./
-        
-    - name: Make artifact executable
-      run: chmod +x iceberg-table-viewer-linux-x86_64
-        
-    - name: Upload development build
-      uses: actions/upload-artifact@v4
-      with:
-        name: iceberg-table-viewer-dev-${{ github.sha }}
-        path: iceberg-table-viewer-linux-x86_64
-        retention-days: 7
+        echo "names=[\"${{ matrix.asset_name }}\"]" >> $GITHUB_OUTPUT
+      shell: bash
