--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -42,7 +42,7 @@ jobs:
         mkdir -p release-assets
         
         # Move all binaries and checksums to release-assets directory
-        find artifacts/ -name "iceberg-table-viewer-*" -type f -exec cp {} release-assets/ \;
+        find artifacts/ -name "hielo-*" -type f -exec cp {} release-assets/ \;
         find artifacts/ -name "*.sha256" -type f -exec cp {} release-assets/ \;
         
         # Create a combined checksum file
@@ -61,7 +61,7 @@ jobs:
         prerelease: ${{ contains(github.ref_name, '-') }}
         generate_release_notes: true
         files: |
-          release-assets/iceberg-table-viewer-*
+          release-assets/hielo-*
           release-assets/checksums.txt
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
