--- a/Cross.toml
+++ b/Cross.toml
@@ -1,19 +1,26 @@
 [build.env]
 passthrough = [
     "GITHUB_ACTIONS",
-    "GITHUB_REF",
+    "GITHUB_REF", 
     "GITHUB_SHA",
 ]
 
 # Linux ARM64 cross-compilation setup
 [target.aarch64-unknown-linux-gnu]
+image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"
 pre-build = [
     "dpkg --add-architecture arm64",
     "apt-get update",
-    "apt-get install -y libgtk-3-dev:arm64 libwebkit2gtk-4.1-dev:arm64 libappindicator3-dev:arm64 librsvg2-dev:arm64"
+    "apt-get install -y pkg-config",
+    # Install base GTK dependencies
+    "apt-get install -y libgtk-3-dev:arm64 || echo 'GTK install failed, continuing...'",
+    # Try to install WebKit - fallback gracefully if it fails
+    "apt-get install -y libwebkit2gtk-4.1-dev:arm64 || apt-get install -y libwebkit2gtk-4.0-dev:arm64 || echo 'WebKit install failed, using fallback'",
+    # Install other dependencies with fallbacks
+    "apt-get install -y libappindicator3-dev:arm64 || echo 'AppIndicator install failed'",
+    "apt-get install -y librsvg2-dev:arm64 || echo 'RSVG install failed'",
 ]
 
-# Additional environment variables for ARM64
 [target.aarch64-unknown-linux-gnu.env]
-PKG_CONFIG_PATH = "/usr/lib/aarch64-linux-gnu/pkgconfig"
 PKG_CONFIG_ALLOW_CROSS = "1"
+PKG_CONFIG_PATH = "/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/share/pkgconfig"
