--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.0", features = ["full"] }
 anyhow = "1.0"
 tracing = "0.1.41"
 log = "0.4.27"
+dirs = "5.0"
 iceberg-catalog-rest = "0.6.0"
 iceberg-catalog-glue = "0.6.0"
 iceberg = "0.6.0"
