build: don't fail the build on quality checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,10 @@ jobs:
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
     - name: Format check
       run: cargo fmt --all -- --check
+      continue-on-error: true
     - name: Clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
+      continue-on-error: true
 
   # Cross-platform build using reusable workflow
   build:
@@ -82,8 +84,7 @@ jobs:
           exit 1
         fi
         if [[ "${{ needs.quality.result }}" != "success" ]]; then
-          echo "Quality job failed"
-          exit 1
+          echo "⚠️  Quality checks failed (warnings only, build continues)"
         fi
         if [[ "${{ needs.build.result }}" != "success" ]]; then
           echo "Build job failed"
