--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -11,31 +11,43 @@ reload_html = true
 watch_path = ["src", "assets"]
 
 [web.resource]
-style = ["./assets/main.css"]
+# Tailwind CSS for styling (using CDN for development)
+style = [
+    "https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css",
+    "./assets/main.css"
+]
 
-[web.proxy]
+[web.resource.dev]
+style = [
+    "./assets/main.css"
+]
+script = []
 
-[bundle]
-identifier = "systems.wellow.hielo.app"
-publisher = "Hielo"
-icon = ["./assets/icon-32x32.png"]
-resources = ["./assets"]
-copyright = "Copyright (c) 2025 Wellow Systems Limited"
-category = "DeveloperTool"
-short_description = "Apache Iceberg table metadata viewer"
-long_description = "A modern desktop application for visualizing Apache Iceberg table schemas, snapshots, and metadata"
 
-[bundle.linux]
-depends = ["libwebkit2gtk-4.1-dev", "libgtk-3-dev"]
-
-[bundle.macos]
-frameworks = []
-minimum_system_version = "10.11"
-exception_domain = []
-
-[bundle.windows]
-digest_algorithm = "sha256"
-timestamp_url = "http://timestamp.sectigo.com"
-tsp = false
-wix = []
-nsis = []
+#[bundle]
+#identifier = "systems.wellow.hielo.app"
+#publisher = "Hielo"
+#icon = ["./assets/icon-32x32.png"]
+#resources = ["./assets"]
+#copyright = "Copyright (c) 2025 Wellow Systems Limited"
+#category = "DeveloperTool"
+#short_description = "Apache Iceberg table metadata viewer"
+#long_description = "A modern desktop application for visualizing Apache Iceberg table schemas, snapshots, and metadata"
+#
+#[bundle.linux]
+#depends = ["libwebkit2gtk-4.1-dev", "libgtk-3-dev"]
+#
+#[bundle.macos]
+#frameworks = []
+#minimum_system_version = "10.11"
+#hardened_runtime = true
+#
+#[bundle.macos.files]
+#
+#[bundle.windows]
+#digest_algorithm = "sha256"
+#timestamp_url = "http://timestamp.sectigo.com"
+#tsp = false
+#webview_install_mode = "Skip"
+#
+#[bundle.windows.files]
